--- a/my_app/templates/my_app/post_list.html
+++ b/my_app/templates/my_app/post_list.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<h1><a href="/">Домашняя страница</a></h1>
+			<h1><a href="/">Киноафиша</a></h1>
 			
 		</div>
 		<div class="content container">
